--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,8 @@ test.py
 saved_models/*
 !saved_models/.gitkeep
 
-inference_results/*
-!inference_results/.gitkeep
-
-data/inference_results/*
-!data/inference_results/.gitkeep
+data/train_results/*
+!data/train_results/.gitkeep
 data/saved_models/*
 !data/saved_models/.gitkeep
 
