--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 .vscode
 
 test.py
+test.ipynb
 
-data/train_results/*
-!data/train_results/.gitkeep
-data/saved_models/*
-!data/saved_models/.gitkeep
+saved_models/*
+!saved_models/.gitkeep
+
+data
+!data/.gitkeep
 
 __pycache__/
 *.pyc
