--- a/hyperparameters.yaml
+++ b/hyperparameters.yaml
@@ -1,3 +1,10 @@
+RAW_DATA_DIR     : 'data/raw'             # Path to the raw data directory
+PROC_DATA_DIR    : 'data/processed'       # Path to the processed data directory
+TRAIN_EX_DIR     : 'data/training_data'   # Path to the training examples directory
+INFER_EX_DIR     : 'data/inference_data'  # Path to the inference examples directory
+SAVED_MODELS_DIR : 'data/saved_models'    # Path to the saved models directory
+LOG_FILE         : 'data/log.txt'         # Path to the log file
+
 base:  # base hyperparameters
   project_name     : 'Template'
   model_name       : 'version_test'
