Enable evaluate metric in trainer

--- a/configs/sweeprc.yaml
+++ b/configs/sweeprc.yaml
@@ -46,7 +46,7 @@ config:
           parameters:
             dataloaders:
               parameters:
-                train_loader:
+                train:
                   parameters:
                     kwargs:
                       parameters:
