--- a/configs/sweeprc.yaml
+++ b/configs/sweeprc.yaml
@@ -7,51 +7,5 @@ config:
     name: 'valid_loss'
     goal: 'minimize'
   parameters:
-    modelrc:
-      parameters:
-        TemplateModel:
-          parameters:
-            kwargs:
-              parameters:
-                hidden_size:
-                  values:
-                    - 128
-                    - 256
-                    - 512
-    taskrc:
-      parameters:
-        runner:
-          parameters:
-            total_steps:
-              value: 100
-            log_freq:
-              value: 50
-            valid_freq:
-              value: 50
-
-        arch:
-          parameters:
-            optimizer:
-              parameters:
-                AdamW:
-                  parameters:
-                    kwargs:
-                      parameters:
-                        lr:
-                          values:
-                            - 0.0001
-                            - 0.0003
-                            - 0.0005
-        data:
-          parameters:
-            dataloaders:
-              parameters:
-                train:
-                  parameters:
-                    kwargs:
-                      parameters:
-                        batch_size:
-                          values:
-                            - 16
-                            - 32
-                            - 64
+    modelrc: {}
+    taskrc: {}
